Update CV with my info

--- a/cv-sections/education.tex
+++ b/cv-sections/education.tex
@@ -13,13 +13,35 @@
 %------------------------------------------------
 
 \cventry
-{B.S. in Computer Science and Engineering} % Degree
-{POSTECH(Pohang University of Science and Technology)} % Institution
-{Pohang, S.Korea} % Location
-{Mar. 2010 - PRESENT} % Date(s)
+{Degree in Computer Engineering} % Degree
+{La Sapienza University of Rome} % Institution
+{Rome, Italy} % Location
+{Oct. 2006 - Dec. 2009} % Date(s)
 { % Description(s) bullet points
 \begin{cvitems}
-\item {Got a Chun Shin-Il Scholarship which is given to promising students in CSE Dept.}
+\item {Completed with honors with a thesis on grid and distributed computing.}
+\end{cvitems}
+}
+
+\cventry
+{Master Degree in Artificial Intelligence and Robotics} % Degree
+{La Sapienza University of Rome} % Institution
+{Rome, Italy} % Location
+{Sep. 2010 - Jul. 2013} % Date(s)
+{ % Description(s) bullet points
+\begin{cvitems}
+	\item {Completed with honor with a thesis on architectural design of Non-Player Characters in videogames.}
+\end{cvitems}
+}
+
+\cventry
+{Ph.D. in Computer Engineering} % Degree
+{La Sapienza University of Rome} % Institution
+{Rome, Italy} % Location
+{Sep. 2013 - Jul. 2017} % Date(s)
+{ % Description(s) bullet points
+\begin{cvitems}
+	\item {Ph.D. focused on improved and combined pathfinding and decision making for Non-Player Characters in videogames.}
 \end{cvitems}
 }
 
