--- a/cv-sections/presentation.tex
+++ b/cv-sections/presentation.tex
@@ -2,7 +2,7 @@
 %	SECTION TITLE
 %----------------------------------------------------------------------------------------
 
-\cvsection{Presentation}
+\cvsection{Publications}
 
 %----------------------------------------------------------------------------------------
 %	SECTION CONTENT
@@ -13,29 +13,66 @@
 %------------------------------------------------
 
 \cventry
-{Presenter for <DEFCON 20th : The way to go to Las Vegas>} % Role
-{6th CodeEngn (Reverse Engineering Conference)} % Event
-{Seoul, S.Korea} % Location
-{Jul. 2012} % Date(s)
+{Davide Aversa, Stavros Vassos} % Authors
+{Belief-Driven Pathfinding Through Personalized Map Abstraction} % Title
+{AIIDE} % Venue
+{2014, Raleigh, North Carolina, USA} % Date/Location
 { % Description(s)
 \begin{cvitems}
-\item {Introduced CTF (Capture the Flag) hacking competition and advanced techniques and strategy for CTF}
+\item {Full paper and speaker of the ``Artificial Intelligence for Interactive Digital Entertainment'' conference 2014.}
 \end{cvitems}
 }
 
 %------------------------------------------------
 
 \cventry
-{Presenter for <Metasploit 101>} % Role
-{6th Hacking Camp - S.Korea} % Event
-{S.Korea} % Location
-{Sep. 2012} % Date(s)
+{Davide Aversa, Sebastian Sardina, Stavros Vassos} % Authors
+{Path Planning With Inventory-Driven Jump-Point-Search} % Title
+{AIIDE} % Venue
+{2015, Santa Cruz, California, USA} % Date
 { % Description(s)
 \begin{cvitems}
-\item {Introduced basic procedure for penetration testing and how to use Metasploit}
+\item {Full paper and speaker of the ``Artificial Intelligence for Interactive Digital Entertainment'' conference 2015.}
 \end{cvitems}
 }
 
 %------------------------------------------------
+
+\cventry
+{Davide Aversa, Stavros Vassos, Sebastian Sardina} % Authors
+{Pruning and Preprocessing Methods for Inventory-Aware Pathfinding} % Title
+{CIG} % Venue
+{2016, Santorini, Greece} % Date
+{ % Description(s)
+\begin{cvitems}
+	\item {Full paper for the ``Computational Intelligence \& Games'' conference 2016.}
+\end{cvitems}
+}
+
+%------------------------------------------------
+
+\cventry
+{Davide Aversa, Stavros Vassos} % Authors
+{Smart Pathfinding: Extending Navigation Search with Agent Capabilities} % Title
+{Nucl.ai} % Venue
+{2016, Vienna, Austria} % Date
+{ % Description(s)
+	\begin{cvitems}
+		\item {Poster for the Nucl.ai conference}
+	\end{cvitems}
+}
+
+%------------------------------------------------
+
+\cventry
+{Davide Aversa, Stavros Vassos} % Authors
+{Solving Belief-Driven Pathfinding using Monte-Carlo Tree Search} % Title
+{DiGRA/FDG} % Venue
+{2016, Dundee, Scotland} % Date
+{ % Description(s)
+\begin{cvitems}
+	\item {Poster and short paper for the ``Digital Games Research Association and Foundation of Digital Games'' joint conference 2016.}
+\end{cvitems}
+}
 
 \end{cventries}
