--- a/cv-sections/skills.tex
+++ b/cv-sections/skills.tex
@@ -14,19 +14,25 @@
 
 \cvskill
 {Programming} % Category
-{Python, C/C++, Scala, JAVA, Node.JS, OCaml, LaTeX} % Skills
+{Python, C\#, JavaScript, TypeScript, C++ (up to C++17), Java, Haskell} % Skills
 
 %------------------------------------------------
 
 \cvskill
-{Web} % Category
-{Django with Python, Express with Node.JS, HTML5, LESS} % Skills
+{Frameworks} % Category
+{Django with Python, Express with Node.JS, Java Spring, HTML5, LESS} % Skills
+
+%------------------------------------------------
+
+\cvskill
+{Game Technologies} % Category
+{Unity3D, Phaser.js, Unreal Engine, OpenGL/WebGL, GLSL} % Skills
 
 %------------------------------------------------
 
 \cvskill
 {Languages} % Category
-{Korean, English, Japanese, Chinese} % Skills
+{Italian, English} % Skills
 
 %------------------------------------------------
 
