--- a/resume_cv.tex
+++ b/resume_cv.tex
@@ -31,8 +31,8 @@
 \fontdir[fonts/] % Specify the location of the included fonts
 
 % Color for highlights
-\colorlet{awesome}{awesome-red} % Default colors include: awesome-emerald, awesome-skyblue, awesome-red, awesome-pink, awesome-orange, awesome-nephritis, awesome-concrete, awesome-darknight
-%\definecolor{awesome}{HTML}{CA63A8} % Uncomment if you would like to specify your own color
+\colorlet{awesome}{awesome-nephritis} % Default colors include: awesome-emerald, awesome-skyblue, awesome-red, awesome-pink, awesome-orange, awesome-nephritis, awesome-concrete, awesome-darknight
+%\definecolor{awesome}{HTML}{00DAAD} % Uncomment if you would like to specify your own color
 
 % Colors for text - uncomment and modify
 %\definecolor{darktext}{HTML}{414141}
@@ -47,26 +47,26 @@
 %	Comment any of the lines below if they are not required
 %----------------------------------------------------------------------------------------
 
-\name{Claud D.}{Park}
-\address{246-1002, Gwangmyeongmayrouge Apt. 86, Cheongna lime-ro, Seo-gu, Incheon-si, 404-180, Rep. of KOREA}
-\mobile{(+82) 10-9030-1843}
+\name{Davide}{Aversa}
+\address{Corso della Repubblica 181, Cisterna di Latina 04012 (LT), Italy}
+\mobile{(+39) 329 4078774}
 
-\email{posquit0.bj@gmail.com}
-\homepage{www.posquit0.com}
-\github{posquit0}
-\linkedin{posquit0}
+\email{davide.aversa@protonmail.com}
+\homepage{www.davideaversa.it}
+\github{thek3nger}
+\linkedin{davideaversa}
 %\skype{skypeid}
 %\stackoverflow{SOid}{SOname}
-%\twitter{@twit}
+\twitter{@thek3nger}
 %\linkedin{linkedin name}
 %\reddit{reddit account}
 %\xing{xing name}
 %\extrainfo{test} % Other text you want to include on this line
 
-\position{Software Engineer{\enskip\cdotp\enskip}Security Expert} % Your expertise/fields
+\position{Ph.D.{\enskip\cdotp\enskip}Software Engineer{\enskip\cdotp\enskip}Artificial Intelligence{\enskip\cdotp\enskip}Game Development} % Your expertise/fields
 \quote{``Make the change that you want to see in the world."} % A quote or statement
 
-\makecvfooter{\today}{Claud D. Park~~~·~~~Résumé}{\thepage} % Specify the letter footer with 3 arguments: (<left>, <center>, <right>), leave any of these blank if they are not needed
+\makecvfooter{\today}{Davide Aversa~~~·~~~Résumé}{\thepage} % Specify the letter footer with 3 arguments: (<left>, <center>, <right>), leave any of these blank if they are not needed
 
 %----------------------------------------------------------------------------------------
 
@@ -85,11 +85,9 @@
 
 \newpage % Force a new page for looks
 
-\input{cv-sections/extracurricular.tex}
-\input{cv-sections/honors.tex}
 \input{cv-sections/presentation.tex}
-\input{cv-sections/writing.tex}
-\input{cv-sections/committees.tex}
+\input{cv-sections/honors.tex}
+% \input{cv-sections/jams.tex}
 
 %----------------------------------------------------------------------------------------
 
